<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">PostureDetection</string>
    <string name="title_detection">Detection</string>
    <string name="title_statistics">Statistics</string>
    <string name="title_profile">Profile</string>
    <string name="title_activity_home">HomeActivity</string>

    <!--Persoanl Information-->
    <string name="personal_information">Personal Information</string>
    <!--Account Settings-->
    <string name="account_settings">Account Settings</string>
    <!--Download Report-->
    <string name="download_report">Download Report</string>
    <!--Logout-->
    <string name="logout">Logout</string>

    <!--Sitting analysis-->
    <string name="sitting_analysis">Sitting Analysis</string>
    <!--historical data-->
    <string name="historical_data">Historical Data</string>



    <string name="tfe_pe_request_permission">This app needs camera permission.</string>
    <string name="tfe_pe_tv_score">Score: %.2f</string>
    <string name="tfe_pe_tv_model">Model: MoveNet Thunder</string>
    <string name="tfe_pe_tv_fps">Fps: %d</string>
    <string name="tfe_pe_tv_debug">DEBUG: %s</string>
    <string name="tfe_pe_tv_device">Device: </string>
    <string name="tfe_pe_tv_camera">Camera: </string>

    <!--    注册登录-->
    <string name="account_name">Email</string>
    <string name="password">Password</string>
    <string name="new_password">New Password</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="remember">Remember Me</string>
    <!--Google Login-->
    <string name="google_login">Google Login</string>
    <!--please input your password-->
    <string name="please_input_email">Please input your email</string>
    <!--please input your password-->
    <string name="please_input_password">Please input your password</string>

    <!--Toast-->
    <string name="user_already_exist">User already exists</string>
    <!--Registration success-->
    <string name="register_success">Registration successful</string>
    <!-- Login failed -->
    <string name="login_fail">Login failed</string>
    <!-- Account login successful -->
    <string name="login_success">Login successful</string>
    <!-- Welcome -->
    <string name="welcome">Welcome Back</string>
    <!--"Save Success"-->
    <string name="save_success">Save Success</string>



    <!--account setting toggle Buttom TV name -->
    <!--AI Device-->
    <string name="ai_device">AI Device</string>
    <!--theme appearance-->
    <string name="theme_appearance">Theme Appearance</string>
    <!--white and dark-->
    <string name="white">White</string>
    <string name="dark">Dark</string>
    <!--language-->
    <string name="language">Language</string>
    <!--Chinese and English and Malay-->
    <string name="chinese">Chinese</string>
    <string name="english">English</string>
    <string name="malay">Malay</string>
    <!--camera-->
    <string name="camera">Camera</string>
    <!--front and back-->
    <string name="front">Front</string>
    <string name="back">Back</string>
    <!--Reminder Notification-->
    <string name="reminder_notification">Reminder Notification</string>
    <!--Pomodoro Alarm-->
    <string name="pomodoro_alarm">Pomodoro Timer</string>
    <!--"Working time is over. Take a break!"-->
    <string name="working_time_is_over">Working time is over. Take a break!</string>
    <!--"Break time is over. Let's get back to work!"-->
    <string name="break_time_is_over">Break time is over. Start working!</string>


    <!--Today-->
    <string name="today">Today</string>
    <!--Yesterday-->
    <string name="yesterday">Yesterday</string>
    <!--Day-->
    <string name="day">Ds Ago</string>

    <!--AlertDialog-->
    <!--save-->
    <string name="confirm_save">Confirm Save</string>
    <!--restart  "Are you sure you want to save and restart the app?"-->
    <string name="confirm_save_and_restart">Are you sure you want to save and restart the app?</string>
    <!--Yes-->
    <string name="yes">Yes</string>
    <!--No-->
    <string name="no">No</string>

    <string-array name="tfe_pe_device_name" translatable="false">
        <item>CPU</item>
        <item>GPU</item>
        <item>NNAPI</item>
    </string-array>

    <string-array name="tfe_pe_camera_name">
        <item>Back</item>
        <item>Front</item>
    </string-array>


    <!--"Daily Reminder"-->
    <string name="daily_reminder">Daily Reminder</string>
    <!--"Daily Reminder Context"-->
    <string name="daily_reminder_context">It is time for your daily reminder</string>

    <!--"Pomo Timer Reminder"-->
    <string name="pomo_timer_reminder">Pomo Timer Reminder</string>
    <!--"Pomo Timer Reminder Context"-->
    <string name="pomo_timer_reminder_context">It is time for your pomo timer reminder</string>
</resources>