<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_detection">

    <fragment
        android:id="@+id/navigation_detection"
        android:name="com.posturedetection.www.ui.detection.DetectionFragment"
        android:label="@string/title_detection"
        tools:layout="@layout/fragment_detection" />

    <fragment
        android:id="@+id/navigation_statistics"
        android:name="com.posturedetection.www.ui.statistics.StatisticsFragment"
        android:label="@string/title_statistics"
        tools:layout="@layout/fragment_statistics" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.posturedetection.www.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />
</navigation>