<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    tools:context=".LoginActivity">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!--        用户名输入-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:background="@color/background"
            android:gravity="center_vertical"
            android:orientation="horizontal">


            <!--            用户名输入框，限制中文输入-->
            <EditText
                android:id="@+id/et_account_email"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:inputType="textVisiblePassword"
                android:background="@android:color/transparent"
                android:hint="@string/please_input_email"
                android:paddingLeft="5dp"
                android:textColor="@color/black0"
                android:textSize="16sp"
                android:drawableLeft="@drawable/ic_person"
                android:drawablePadding="8dp"/>

            <ImageView
                android:id="@+id/iv_more_account"
                android:layout_width="20dp"
                android:layout_height="25dp"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:src="@drawable/ic_arrow_down" />

        </LinearLayout>

        <!--        密码输入-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:background="@color/background"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <!--            密码输入框，限制中文输入-->
            <EditText
                android:id="@+id/et_password"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:hint="@string/please_input_password"
                android:inputType="textPassword"
                android:paddingLeft="5dp"
                android:textColor="@color/black0"
                android:textSize="16sp"
                android:drawablePadding="8dp"
                android:drawableLeft="@drawable/ic_lock_black"/>

            <ImageView
                android:id="@+id/iv_eye"
                android:layout_width="20dp"
                android:layout_height="25dp"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:src="@drawable/ic_eye" />

        </LinearLayout>

        <!--        记住密码-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp">

            <CheckBox
                android:id="@+id/cb_remember"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/remember"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.google.android.material.button.MaterialButton
                android:id="@+id/gSignInBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:layout_marginBottom="24dp"
                android:layout_marginTop="10dp"
                android:text="@string/google_login"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:icon="@drawable/google"
                app:iconTint="@null"
                app:iconGravity="textStart"
                app:iconPadding="8dp"
                app:iconSize="24dp"
                app:strokeColor="@color/black"
                app:strokeWidth="1dp"
                app:backgroundTint="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent" />
        </LinearLayout>

        <!--        注册登录按钮-->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="10dp"
                android:text="@string/register" />

            <Button
                android:id="@+id/login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="30dp"
                android:text="@string/login" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>