<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AccountSettingsActivity">

    <com.posturedetection.android.widget.TitleLayout
        android:id="@+id/tl_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp">

        <TextView
            android:id="@+id/tvAIDevice"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="@dimen/pickerview_textsize"
            android:text="@string/ai_device" />

        <com.savvyapps.togglebuttonlayout.ToggleButtonLayout
            android:id="@+id/tb_ai_device"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="16dp"
            app:selectedColor="@color/green2"
            app:menu="@menu/toggle_button_device" />
    </LinearLayout>

    <!-- Add the divider between LinearLayouts -->
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@drawable/divider" />

    <LinearLayout
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp">

        <TextView
            android:id="@+id/tv_theme_appearance"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="@dimen/pickerview_textsize"
            android:text="@string/theme_appearance" />

        <com.savvyapps.togglebuttonlayout.ToggleButtonLayout
            android:id="@+id/tb_theme_appearance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="16dp"
            app:selectedColor="@color/green2"
            app:menu="@menu/toggle_button_theme_appearance" />
    </LinearLayout>

    <!-- Add the divider between LinearLayouts -->
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@drawable/divider" />

    <LinearLayout
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp">

        <TextView
            android:id="@+id/tv_camera"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="@dimen/pickerview_textsize"
            android:text="@string/camera" />

        <com.savvyapps.togglebuttonlayout.ToggleButtonLayout
            android:id="@+id/tb_camera"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="16dp"
            app:selectedColor="@color/green2"
            app:menu="@menu/toggle_button_camera" />
    </LinearLayout>
    <!-- Add the divider between LinearLayouts -->
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@drawable/divider" />
    <!--language-->
    <LinearLayout
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp">

        <TextView
            android:id="@+id/tv_language"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="@dimen/pickerview_textsize"
            android:text="@string/language" />

        <com.savvyapps.togglebuttonlayout.ToggleButtonLayout
            android:id="@+id/tb_language"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="16dp"
            app:selectedColor="@color/green2"
            app:menu="@menu/toggle_button_language" />

    </LinearLayout>

    <!-- Add the divider between LinearLayouts -->
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@drawable/divider" />
    <!--pomodoro_alarm-->

    <LinearLayout
        android:id="@+id/ll_pomodoro_alarm"
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp">

        <TextView
            android:id="@+id/tv_pomodoro_timer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="@dimen/pickerview_textsize"
            android:text="@string/pomodoro_alarm" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/ss_pomo_timer"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:checked="false"
            android:textOff="Off"
            android:textOn="Open"
            android:layout_marginRight="16dp"
            android:textSize="@dimen/pickerview_textsize"
            android:layout_centerHorizontal="true"
            app:trackTint="@drawable/switch_track_color_selector"
            app:trackTintMode="multiply"
            app:thumbTint="@drawable/switch_thumb_color_selector"
            app:thumbTintMode="multiply"
            />

    </LinearLayout>

</LinearLayout>
